tests/ui/delegation/delegation-first-arg.stderr
error: delegation's target expression is specified for function with no params
  --> $DIR/delegation-first-arg.rs:27:38
   |
LL |     reuse <S as Trait>::static_empty { self.0 }
   |                                      ^^^^^^^^^^

error: delegation's target expression is specified for function with no params
  --> $DIR/delegation-first-arg.rs:61:83
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                                                                   ^^^^^^^^^^

error: delegation's target expression is specified for function with no params
  --> $DIR/delegation-first-arg.rs:76:23
   |
LL | reuse to_reuse::empty { self + 1 }
   |                       ^^^^^^^^^^^^

error: delegation's target expression is specified for function with no params
  --> $DIR/delegation-first-arg.rs:82:60
   |
LL | reuse to_reuse::{empty as empty1, one_param as one_param1} { self + 1 }
   |                                                            ^^^^^^^^^^^^

error[E0283]: type annotations needed
  --> $DIR/delegation-first-arg.rs:18:1
   |
LL | reuse impl Trait for F { self.0 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: the type must implement `Trait`
help: the following types implement trait `Trait`
  --> $DIR/delegation-first-arg.rs:13:1
   |
LL | impl Trait for S {}
   | ^^^^^^^^^^^^^^^^ `S`
...
LL | reuse impl Trait for F { self.0 }
   | ^^^^^^^^^^^^^^^^^^^^^^ `F`
...
LL | impl Trait for F3 {
   | ^^^^^^^^^^^^^^^^^ `F3`

error[E0283]: type annotations needed
  --> $DIR/delegation-first-arg.rs:18:1
   |
LL | reuse impl Trait for F { self.0 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: the type must implement `Trait`
help: the following types implement trait `Trait`
  --> $DIR/delegation-first-arg.rs:13:1
   |
LL | impl Trait for S {}
   | ^^^^^^^^^^^^^^^^ `S`
...
LL | reuse impl Trait for F { self.0 }
   | ^^^^^^^^^^^^^^^^^^^^^^ `F`
...
LL | impl Trait for F3 {
   | ^^^^^^^^^^^^^^^^^ `F3`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/delegation-first-arg.rs:27:25
   |
LL |     reuse <S as Trait>::static_empty { self.0 }
   |                         ^^^^^^^^^^^^ ---------- unexpected argument
   |
note: associated function defined here
  --> $DIR/delegation-first-arg.rs:8:8
   |
LL |     fn static_empty() {}
   |        ^^^^^^^^^^^^
help: remove the extra argument
   |
LL -     reuse <S as Trait>::static_empty { self.0 }
LL +     reuse <S as Trait>::static_empt{ self.0 }
   |

error[E0610]: `usize` is a primitive type and therefore doesn't have fields
  --> $DIR/delegation-first-arg.rs:31:49
   |
LL |     reuse <S as Trait>::static_one_param { self.0 }
   |                                                 ^

error[E0308]: mismatched types
  --> $DIR/delegation-first-arg.rs:54:85
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                   ----- arguments to this function are incorrect    ^^^^^^ expected `&_`, found `S`
   |
   = note: expected reference `&_`
                 found struct `S`
note: function defined here
  --> $DIR/delegation-first-arg.rs:45:12
   |
LL |     pub fn r#ref(_: &impl Trait) {}
   |            ^^^^^ --------------
help: consider borrowing here
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { &self.0 }
   |                                                                                     +

error[E0308]: mismatched types
  --> $DIR/delegation-first-arg.rs:54:85
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                          -------                                    ^^^^^^ expected `&mut _`, found `S`
   |                                          |
   |                                          arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut _`
                         found struct `S`
note: function defined here
  --> $DIR/delegation-first-arg.rs:46:12
   |
LL |     pub fn mut_ref(_: &mut impl Trait) {}
   |            ^^^^^^^ ------------------
help: consider mutably borrowing here
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { &mut self.0 }
   |                                                                                     ++++

error[E0609]: no field `0` on type `impl Trait`
  --> $DIR/delegation-first-arg.rs:61:90
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                                                                          ^ unknown field

error[E0609]: no field `0` on type `&impl Trait`
  --> $DIR/delegation-first-arg.rs:61:90
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                                                                          ^ unknown field

error[E0609]: no field `0` on type `&mut impl Trait`
  --> $DIR/delegation-first-arg.rs:61:90
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                                                                          ^ unknown field

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/delegation-first-arg.rs:61:51
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                                   ^^^^^^^^^^^^                    ---------- unexpected argument
   |
note: function defined here
  --> $DIR/delegation-first-arg.rs:48:12
   |
LL |     pub fn static_empty() {}
   |            ^^^^^^^^^^^^
help: remove the extra argument
   |
LL -     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
LL +     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empt{ self.0 }
   |

error[E0610]: `usize` is a primitive type and therefore doesn't have fields
  --> $DIR/delegation-first-arg.rs:61:90
   |
LL |     reuse trait_to_reuse::{value, r#ref, mut_ref, static_empty, static_one_param} { self.0 }
   |                                                                                          ^

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/delegation-first-arg.rs:76:17
   |
LL | reuse to_reuse::empty { self + 1 }
   |                 ^^^^^ ------------ unexpected argument
   |
note: function defined here
  --> $DIR/delegation-first-arg.rs:71:12
   |
LL |     pub fn empty() {}
   |            ^^^^^
help: remove the extra argument
   |
LL - reuse to_reuse::empty { self + 1 }
LL + reuse to_reuse::empt{ self + 1 }
   |

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/delegation-first-arg.rs:82:18
   |
LL | reuse to_reuse::{empty as empty1, one_param as one_param1} { self + 1 }
   |                  ^^^^^                                     ------------ unexpected argument
   |
note: function defined here
  --> $DIR/delegation-first-arg.rs:71:12
   |
LL |     pub fn empty() {}
   |            ^^^^^
help: remove the extra argument
   |
LL - reuse to_reuse::{empty as empty1, one_param as one_param1} { self + 1 }
LL + reuse to_reuse::{empt{ self + 1 }
   |

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0061, E0283, E0308, E0609, E0610.
For more information about an error, try `rustc --explain E0061`.
